Can't fix tag first-save issue?
Fixed tag formatting; editing is better; tag first-save issue has
cropped up; minor cleanup.

--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ p {
     padding: 1em;
     text-align: justify;
     border-bottom: 3px #f16221 solid;
-    background-color: rgba(241, 98, 33, 0.025);/*rgba(241, 98, 33, 0.1);*/
+    background-color: rgba(241, 98, 33, 0.05);/*rgba(241, 98, 33, 0.1);*/
 }
 .note:hover {
     cursor: pointer;
@@ -49,14 +49,14 @@ p {
     display: block;
 }
 .note-tag {
-    float: left;
-    line-height: 14px;
+    display: inline-block;
     color: white;
     background-color: #f16221;
     border-style: solid;
     border-color: #f16221;
     border-radius: 5px;
     margin-right: 3px;
+    margin-bottom: 3px;
 }
 .note-button {
     float: right;
